# electricui-embedded

./: .gitignore  CMakeLists.txt
src/: electricui.c  electricui.h  eui_config.h  eui_macro.h  eui_types.h
src/transports/: eui_binary_transport.c  eui_binary_transport.h  eui_transport_types.h
